@@ -357,6 +357,7 @@ utils/config.ml: utils/config.mlp config/Makefile
 	    -e "s|%%SYSTHREAD_SUPPORT%%|true|" \
 	    -e 's|%%ASM%%|$(ASM)|' \
 	    -e 's|%%ASM_CFI_SUPPORTED%%|false|' \
+	    -e 's|%%WITH_FRAME_POINTERS%%|false|' \
 	    -e 's|%%MKDLL%%|$(MKDLL)|' \
 	    -e 's|%%MKEXE%%|$(MKEXE)|' \
 	    -e 's|%%MKMAINDLL%%|$(MKMAINDLL)|' \
