@@ -57,6 +57,7 @@ let rec regalloc ppf round fd =
 let (++) x f = f x
 
 let compile_fundecl (ppf : formatter) fd_cmm =
+  Proc.init ();
   Reg.reset();
   fd_cmm
   ++ Selection.fundecl
