@@ -237,3 +237,5 @@ let assemble_file infile outfile =
 
 open Clflags;;
 open Config;;
+
+let init () = ()
