@@ -211,3 +211,5 @@ let assemble_file infile outfile =
   end in
   Ccomp.command (Config.asm ^ asflags ^
                  Filename.quote outfile ^ " " ^ Filename.quote infile)
+
+let init () = ()
